--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -11,7 +11,7 @@
         p: components.p,
         bullets: components.bullets)
 
-@(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], postAction: Call, previousUploads: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @appealType = @{request.session.get(SessionKeys.appealType)}
 @detailsContent = {
@@ -52,7 +52,7 @@
 
 
     @formHelper(action = postAction,
-        args = (Symbol("data-multi-file-upload-start-rows"), "1"), (Symbol("data-multi-file-upload-max-files"), "5"), (Symbol("id"), "multi-upload-form")) {
+        args = (Symbol("data-multi-file-upload-start-rows"), "1"), (Symbol("data-multi-file-upload-max-files"), "5"), (Symbol("id"), "multi-upload-form"), (Symbol("multiFileUploadUploadedFiles"), previousUploads)) {
             <ul class="multi-file-upload__item-list"></ul>
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
