[PRM-686] Added remove button to uploadItem

--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -19,7 +19,10 @@
                 </div>
             </div>
 
-            @* TODO: add remove/change links *@
+            <button type="button" class="multi-file-upload__remove-item govuk-link">
+                @messages("otherReason.uploadEvidence.button.remove")
+            </button>
+            <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
         </div>
     </div>
 </li>
