--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -19,7 +19,11 @@
                 </div>
             </div>
 
-            @* TODO: add remove/change links *@
+            <button type="button" class="multi-file-upload__remove-item govuk-link">
+                @messages("otherReason.uploadEvidence.button.remove")
+                <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></span>
+            </button>
+            <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
         </div>
     </div>
 </li>
