--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -4,8 +4,7 @@
         <label class="govuk-label" for="file-{fileIndex}">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></label>
         <div class="multi-file-upload__item-content">
             <div class="multi-file-upload__file-container">
-                                                                                @* TODO: 'name' attribute to be removed, temp fix *@
-                <input class="multi-file-upload__file govuk-file-upload" type="file" id="file-{fileIndex}" name="upload-evidence" accept="@acceptedFileExtensions">
+                <input class="multi-file-upload__file govuk-file-upload" type="file" id="file-{fileIndex}" accept="@acceptedFileExtensions">
                 <span class="multi-file-upload__file-name"></span>
             </div>
 
@@ -17,13 +16,15 @@
                     <span class="multi-file-upload__uploaded-tag govuk-tag">@messages("otherReason.uploadEvidence.status.uploaded")</span>
                     <span class="multi-file-upload__waiting-tag govuk-tag govuk-tag--grey">@messages("otherReason.uploadEvidence.status.pending")</span>
                 </div>
+
+                <button type="button" class="multi-file-upload__remove-item govuk-link">
+                    @messages("otherReason.uploadEvidence.button.remove")
+                    <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></span>
+                </button>
+                <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
             </div>
 
-            <button type="button" class="multi-file-upload__remove-item govuk-link">
-                @messages("otherReason.uploadEvidence.button.remove")
-                <span class="govuk-visually-hidden">@messages("otherReason.uploadEvidence.document") <span class="multi-file-upload__number">{fileNumber}</span></span>
-            </button>
-            <span class="multi-file-upload__removing">@messages("otherReason.uploadEvidence.button.removing")</span>
+
         </div>
     </div>
 </li>
