--- a/app/views/obligation/OtherRelevantInformationPage.scala.html
+++ b/app/views/obligation/OtherRelevantInformationPage.scala.html
@@ -22,7 +22,7 @@
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         govukButton: GovukButton,
-        textArea: components.textArea)
+        characterCount: components.characterCount)
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
@@ -33,11 +33,12 @@
     formErrors = form.errors) {
     @formHelper(action = postAction) {
 
-        @textArea(form, "other-relevant-information-text", messages("otherRelevantInformation.heading"),
-            isPageHeading = true,
-            describedBy = Some("other-relevant-information-text-hint"),
-            labelClasses = Some("govuk-label--l"),
-            hint = Some(Html(messages("otherRelevantInformation.hintText"))))
+        @characterCount(
+            form("other-relevant-information-text"),
+            label = messages("otherRelevantInformation.heading"),
+            hint = Some(HtmlContent(messages("otherRelevantInformation.hintText"))),
+            maxLength = Some(5000)
+        )
 
         @govukButton(Button(content = Text(messages("common.continue"))))
     }
