--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -2,10 +2,12 @@
 
 @()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = messages("problemWithService.title"),
-        showPenaltyInformation = false) {
-
-    <h1 class="govuk-heading-xl">@messages("problemWithService.heading")</h1>
+@layout(
+    pageTitle = messages("problemWithService.title"),
+    showPenaltyInformation = false,
+    isPageFullWidth = false
+) {
+    <h1 class="govuk-heading-l">@messages("problemWithService.heading")</h1>
     <p class="govuk-body">@messages("problemWithService.p1")</p>
     <p class="govuk-body">@messages("problemWithService.p2")</p>
     <p class="govuk-body">@messages("problemWithService.p3")</p>
