--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -63,7 +63,8 @@
         (Symbol("data-multi-file-upload-send-url-tpl"), initiateNextFileUpload.url),
         (Symbol("data-multi-file-upload-uploaded-files"), previousUploads),
         (Symbol("data-multi-file-upload-status-url-tpl"), getStatusUrl("{fileRef}").url),
-        (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl("{fileRef}").url)) {
+        (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl("{fileRef}").url),
+        (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring"))) {
             <ul class="multi-file-upload__item-list"></ul>
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
