--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -70,6 +70,11 @@
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
 
+            <p class="govuk-body multi-file-upload__form-status hidden" aria-hidden="true">
+                @messages("otherReason.uploadEvidence.stillTransferring")...
+                <span class="file-upload__spinner ccms-loader"></span>
+            </p>
+
             <div class="multi-file-upload__notifications govuk-visually-hidden" aria-live="polite" role="status"></div>
 
             <script type="text/x-template" id="multi-file-upload-item-tpl">@uploadItem(appConfig.acceptedFileTypes)</script>
