--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
@@ -1,3 +1,6 @@
+
+@import models.upload.UpscanInitiateResponseModel
+
 @this(layout: Layout,
         formHelper: FormWithCSRF,
         govukFileUpload: GovukFileUpload,
@@ -7,10 +10,8 @@
         bullets: components.bullets,
         fileUploadDialog: components.upload.fileUploadDialog)
 
-@(
-  form: Form[_],
-  postAction: Call,
-  cancelUrl: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(upscanResponse: UpscanInitiateResponseModel,
+  form: Form[_])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @detailsContent = {
         @p(Html(messages("otherReason.uploadEvidence.details.p1")))
@@ -36,13 +37,17 @@
         <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
         @details("otherReason.uploadEvidence.details.heading", detailsContent)
 
-        @formHelper(action = postAction, args = (Symbol("id"), "file-upload-form")){
+        <form method="POST" action="@upscanResponse.uploadRequest.href" id="file-upload-form" enctype="multipart/form-data">
+                @for(field <- upscanResponse.uploadRequest.fields) {
+                <input type="hidden" name="@field._1" value="@field._2"/>
+                }
                 <div id="file-upload-form-group" class="govuk-form-group">
                         @fileUploadDialog(form)
                 </div>
                 <span>
                         @govukButton(Button(content = Text(messages("otherReason.uploadAnotherDocument.noJs.button.uploadFile"))))
-                        <a href="@cancelUrl" class="govuk-button govuk-button--secondary">@messages("otherReason.uploadAnotherDocument.noJs.button.cancel")</a>
+<!--                        TODO change # to when "You have uploaded X file(s)" page is added (PRM-720) -->
+                        <a href="#" class="govuk-button govuk-button--secondary">@messages("otherReason.uploadAnotherDocument.noJs.button.cancel")</a>
                 </span>
-        }
+        </form>
 }
