--- a/app/views/components/upload/fileUploadDialog.scala.html
+++ b/app/views/components/upload/fileUploadDialog.scala.html
@@ -5,7 +5,7 @@
 
 @this()
 
-@(form: Form[_])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], isAddingAnotherDocument: Boolean = false)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @if(form.hasErrors) {
     <div class="govuk-form-group govuk-form-group--error">
@@ -23,7 +23,11 @@
     </div>
 } else {
     <label class="govuk-label govuk-label--m" for="file">
-    @messages("otherReason.uploadEvidence.noJs.uploadLabel")
+     @if(!isAddingAnotherDocument) {
+         @messages("otherReason.uploadEvidence.noJs.uploadLabel")
+     } else {
+         @messages("otherReason.uploadEvidence.noJs.uploadAnotherLabel")
+     }
     </label>
 
     <input class="govuk-file-upload" id="file" name="file" type="file"
