--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
@@ -39,10 +39,10 @@
 
         <form method="POST" action="@upscanResponse.uploadRequest.href" id="file-upload-form" enctype="multipart/form-data">
                 @for(field <- upscanResponse.uploadRequest.fields) {
-                <input type="hidden" name="@field._1" value="@field._2"/>
+                        <input type="hidden" name="@field._1" value="@field._2"/>
                 }
                 <div id="file-upload-form-group" class="govuk-form-group">
-                        @fileUploadDialog(form)
+                        @fileUploadDialog(form, isAddingAnotherDocument = true)
                 </div>
                 <span>
                         @govukButton(Button(content = Text(messages("otherReason.uploadAnotherDocument.noJs.button.uploadFile"))))
