--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadAnotherDocumentPage.scala.html
@@ -11,7 +11,8 @@
         fileUploadDialog: components.upload.fileUploadDialog)
 
 @(upscanResponse: UpscanInitiateResponseModel,
-  form: Form[_])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+  form: Form[_],
+  fileListPage: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @detailsContent = {
         @p(Html(messages("otherReason.uploadEvidence.details.p1")))
@@ -46,7 +47,7 @@
                 </div>
                 <span>
                         @govukButton(Button(content = Text(messages("otherReason.uploadAnotherDocument.noJs.button.uploadFile"))))
-                        <a href = upload-complete class="govuk-button govuk-button--secondary">@messages("otherReason.uploadAnotherDocument.noJs.button.cancel")</a>
+                        <a href="@fileListPage" class="govuk-button govuk-button--secondary">@messages("otherReason.uploadAnotherDocument.noJs.button.cancel")</a>
                 </span>
         </form>
 }
