--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
@@ -5,11 +5,12 @@
         formHelper: FormWithCSRF,
         govukButton: GovukButton,
         p: components.p,
-        radios: components.radios)
+        radios: components.radios,
+        govukSummaryList : GovukSummaryList)
 
-@(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, filesUploaded: Int)(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call,  uploadRows: Seq[SummaryListRow])(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
-@pageHeadingAndTitle = @{getPluralOrSingular(filesUploaded)("otherReason.uploadList.youHaveUploadedFile.headingAndTitle", "otherReason.uploadList.youHaveUploadedFiles.headingAndTitle").toString()}
+@pageHeadingAndTitle = @{getPluralOrSingular(uploadRows.length)("otherReason.uploadList.youHaveUploadedFile.headingAndTitle", "otherReason.uploadList.youHaveUploadedFiles.headingAndTitle").toString()}
 
 @layout(pageTitle = messages(pageHeadingAndTitle),
     isPageFullWidth = false,
@@ -17,7 +18,10 @@
     formErrors = form.errors) {
     @formHelper(action = postAction) {
         <h1 class="govuk-heading-l"> @messages(pageHeadingAndTitle) </h1>
-    @if(filesUploaded < 5) {
+        <div class="app-summary-card__body">
+            @govukSummaryList(SummaryList(uploadRows))
+        </div>
+    @if(uploadRows.length < 5) {
         @radios(form = form,
             legend = messages("otherReason.uploadList.uploadAnotherFile"),
             items = radioOptions ,
