[PRM-848] - Added GOV.UK link for GOV.UK logo

--- a/app/views/components/Header.scala.html
+++ b/app/views/components/Header.scala.html
@@ -22,7 +22,7 @@
 @(showSignOut: Boolean = true)(implicit messages: Messages)
 
 @hmrcHeader(Header(
-    homepageUrl = controllers.routes.AppealStartController.onPageLoad().url,
+    homepageUrl = "https://www.gov.uk/",
     serviceUrl = controllers.routes.AppealStartController.onPageLoad().url,
     serviceName = Some(messages("service.name")),
     containerClasses = "govuk-width-container",
