--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -17,7 +17,8 @@
         initiateNextFileUpload: Call,
         getStatusUrl: String => Call,
         removeFileUrl: String => Call,
-        previousUploads: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+        previousUploads: String,
+        containsDuplicate: Boolean)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @appealType = @{request.session.get(SessionKeys.appealType)}
 @detailsContent = {
@@ -66,6 +67,7 @@
         (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl("{fileRef}").url),
         (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
         (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload"))) {
+
             <ul class="multi-file-upload__item-list"></ul>
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
@@ -81,7 +83,6 @@
             <script type="text/x-template" id="error-manager-summary-tpl">@errorManager.summary(messages)</script>
             <script type="text/x-template" id="error-manager-summary-item-tpl">@errorManager.summaryItem(messages)</script>
             <script type="text/x-template" id="error-manager-message-tpl">@errorManager.message(messages)</script>
-
             <p>
                 @govukButton(Button(content = Text(messages("common.continue"))))
             </p>
