--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -49,12 +49,6 @@
     isPageFullWidth = false,
     customJavaScript = Some("upload/multiFileUpload.js")) {
     <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.heading")</h1>
-    <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
-    <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
-    <p class="govuk-body">@messages("otherReason.uploadEvidence.p3")</p>
-    <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
-    <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
-    @details("otherReason.uploadEvidence.details.heading", detailsContent)
 
     @formHelper(action = postAction,
         args =
@@ -67,7 +61,14 @@
         (Symbol("data-multi-file-upload-remove-url-tpl"), removeFileUrl("{fileRef}").url),
         (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
         (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload"))) {
+            <span class="govuk-inset-text hidden" aria-hidden="true">test test</span>
+            <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
+            <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
+            <p class="govuk-body">@messages("otherReason.uploadEvidence.p3")</p>
+            <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
+            <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
 
+            @details("otherReason.uploadEvidence.details.heading", detailsContent)
             <ul class="multi-file-upload__item-list"></ul>
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
