--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
@@ -6,8 +6,7 @@
         govukButton: GovukButton,
         p: components.p,
         radios: components.radios,
-        govukSummaryList : GovukSummaryList,
-        govukInsetText : GovukInsetText)
+        govukSummaryList : GovukSummaryList)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, uploadRows: Seq[Html], optInsetText: Option[Html])(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
