[PRM-926] - Changed heading to L for 'Appeal a VAT penalty' page

--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -44,7 +44,7 @@
 
 @layout(pageTitle = messages("appealStart.title"),
         isPageFullWidth = false) {
-    <h1 class="govuk-heading-xl">@messages("appealStart.header")</h1>
+    <h1 class="govuk-heading-l">@messages("appealStart.header")</h1>
     <p class="govuk-body">@messages("appealStart.p1")</p>
     @bullets(
         Seq(
